quicklog/tests/failures/expr_without_name_3.stderr
error: expected identifier; expressions or non-identifiers must be accompanied by a name, e.g. info!(some_expr = foo(), ...)
 --> tests/failures/expr_without_name_3.rs:9:11
  |
9 |     info!(foo(), some_other = 5);
  |           ^^^^^
