quicklog/tests/failures/expr_without_name_3.rs
use quicklog::info;

fn foo() {}

fn main() {
    // valid alternatives:
    // info!(name = foo());
    // info!("{}", foo());
    info!(foo(), some_other = 5);
}
